Removes adclickcapture replacing it with adclick. Adds default targeting.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -53,6 +53,8 @@
 		<div class="dtnad" data-sv-adunit="/214662569/dtn_featured_listings" data-sv-adstyle="recid" data-sv-adrecid="0">
 			<p><a href="http://www.google.com/" data-sv-adclick>Title 0</a></p>
 			<p>Some description <a href="http://www.reddit.com/" data-sv-adclick>Read More</a></p>
+			<div data-sv-adclick>Track Me</div>
+			<div>Do not track me</div>
 		</div>
 		<hr>
 		
@@ -61,11 +63,6 @@
 			<p><a href="http://www.google.com/">Title 1</a></p>
 		</div>
 		<hr>
-		
-		<div id="hax" data-sv-adunit="/214662569/dtn_featured_listings" data-sv-adstyle="recid" data-sv-adrecid="3" data-sv-adclickcapture>
-			<p><a href="http://www.google.com/">Title 3</a></p>
-			<p>What</p>
-		</div>
 		
 		<script src="/index.min.js"></script>
 		<script>
